--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@react-navigation/stack": "^6.2.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-web": "0.17.7",
+    "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
